# lightning-rl

./: .gitignore  README.md  pyproject.toml
examples/: a2c_cartpole.py  a2c_pong.py  dqn_cartpole.py  dqn_pong.py  icm_test.py  ppg_pong.py  ppo_atari.py  ppo_atari_gru.py  ppo_atari_lstm.py  ppo_pong.py  rppo_pong.py  sac_continuous_action.py
lightning_rl/common/: __init__.py  advantage.py  atari_wrappers.py  buffers.py  callbacks.py  datasets.py  layer_init.py  layers.py  off_policy_model.py  on_policy_model.py  rl_model.py  utils.py  wrappers.py
lightning_rl/common/wrappers/: atari_preprocessing.py
lightning_rl/models/: __init__.py  a2c.py  dqn.py  icm.py  rl_model.py
lightning_rl/models/networks/: impala.py  impala_cnn.py  nature.py  sacae.py
lightning_rl/models/off_policy/: __init__.py  dqn.py  drq.py  off_policy_model.py  sac.py
lightning_rl/models/off_policy_models/: __init__.py  dqn.py  off_policy_model.py
lightning_rl/models/on_policy/: __init__.py  a2c.py  ppg.py  ppo.py  recurrent_on_policy_model.py  recurrent_ppo.py
lightning_rl/models/on_policy_models/: __init__.py  a2c.py  on_policy_model.py  ppg.py  ppo.py  recurrent_on_policy_model.py  recurrent_ppo.py  rppo.py
lightning_rl/modules/: cnn.py  encoder.py  projection.py
lightning_rl/wrappers/: __init__.py  transpose_observation.py
