[tool.poetry]
name = "lightning-rl"
version = "0.1.0"
description = ""
authors = ["ShaneFlandermeyer <shaneflandermeyer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^1.7.7"
stable-baselines3 = "^1.6.2"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
