[tool.poetry]
name = "lightning-rl"
version = "0.1.0"
description = ""
authors = ["ShaneFlandermeyer <shaneflandermeyer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "^1.7.7"
opencv-python = "^4.6.0"
Gymnasium = {extras = ["accept-rom-license", "all"], version = "^0.26.3"}
torch = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
